--- a/src/components/work/phone-pres/text/style.scss
+++ b/src/components/work/phone-pres/text/style.scss
@@ -67,6 +67,7 @@
 			// For the positioning of the text within the container
 
 			div{
+				width: 100%;
 				opacity: 0;
 
 				// Delay each child by 600ms
