--- a/src/global-css/typography/_paragraphs.scss
+++ b/src/global-css/typography/_paragraphs.scss
@@ -39,6 +39,8 @@ p{
 		&:hover{
 			color: $white;
 
+			// Show the background, behind the text
+
 			&:after{
 				transform: translateY(0px);
 				background: $black;
