bad spellz and other trix

--- a/src/components/work/_projects/cardiact/app/emergency/chat/scss/_message-controls.scss
+++ b/src/components/work/_projects/cardiact/app/emergency/chat/scss/_message-controls.scss
@@ -11,6 +11,8 @@
 	padding: 15px 15px 20px 10px;
 	background: $white;
 
+	// For the sizing of the camera icon, on the left of the container
+
 	.icon__camera{
 		position: absolute;
 		transform: scale(0.6);
