--- a/src/components/work/_projects/cardiact/app/emergency/map/scss/_map-main.scss
+++ b/src/components/work/_projects/cardiact/app/emergency/map/scss/_map-main.scss
@@ -59,6 +59,8 @@
 		overflow: hidden;
 		z-index: 12;
 
+		// For the sizing of th image in the container
+
 		img{
 			min-height: 100%;
 			width: auto;
