--- a/src/components/work/_projects/cardiact/app/emergency/map/scss/bottom/_bottom-container.scss
+++ b/src/components/work/_projects/cardiact/app/emergency/map/scss/bottom/_bottom-container.scss
@@ -66,6 +66,10 @@
 	.btn__confirm{ 
 		animation: show-btn 30s forwards infinite; 
 		visibility: hidden; 
+
+		.btn__contain{
+			width: 95%;
+		}
 	}
 
 	// !-- Animation for the expanded directions
