--- a/src/components/work/_projects/cardiact/app/shared/victim/card/style.scss
+++ b/src/components/work/_projects/cardiact/app/shared/victim/card/style.scss
@@ -18,9 +18,9 @@
 		@extend %display-flex-space-between;
 		@extend %flex-center-vertical;
 		padding: 5px;
+		margin-bottom: 4px;
 		border-radius: 44px;
-		background: #ee000b;
-		cursor: pointer;
+		background: #d40e17;
 
 		// Arrow icon on the right of the container
 
