--- a/src/components/work/_projects/cardiact/app/static/contacts/style.scss
+++ b/src/components/work/_projects/cardiact/app/static/contacts/style.scss
@@ -1,9 +1,6 @@
 
 // Add more padding to the top and bottom of the list containers
 
-.cardiact__static{
-
-	.list__contacts{
-		padding: 10px 0;
-	}
+.cardiact__static .list__contacts{
+	padding: 10px 0;
 }
