--- a/src/components/work/_projects/cardiact/process/style.scss
+++ b/src/components/work/_projects/cardiact/process/style.scss
@@ -4,7 +4,7 @@
 // For the styling of the process work within the CardiAct page
 // This is in the middle of the page, below the project info
 
-.block__process{
+.page__block--process{
 	position: relative;
 	padding-top: 100px;
 	color: $white;
