--- a/src/components/assets/icons/camera/style.scss
+++ b/src/components/assets/icons/camera/style.scss
@@ -46,7 +46,7 @@
 				display: block;
 				width: 100%;
 				height: 100%;
-				background: $black;
+				background: #808080;
 				border-radius: 8px 8px 0px 0px;
 			}
 
