--- a/src/components/work/_projects/cardiact/app/emergency/map/routes/route-two/style.scss
+++ b/src/components/work/_projects/cardiact/app/emergency/map/routes/route-two/style.scss
@@ -1,9 +1,7 @@
 
 // For the route going to the victim on the bottom of the map screen
 
-
  @keyframes route-three{
-
     0%, 50% { transform: translateX(0px); }
     80%, 98% { transform: translateX(100px) scale(1); opacity: 1; }
     99%, 100% { transform: translateX(100px) scale(0.4); opacity: 0; }
@@ -13,7 +11,7 @@
 	transform: translate3d(-64px, 171px, 0px);
     position: absolute;
     width: 133px;
-    height: 100px;
+    height: 109px;
     z-index: 8;
 
     // For the styling of the routes
@@ -26,6 +24,8 @@
     	&__right{
     		height: 100%;
     	}
+
+        // For the placement of the responder
 
         &__responder{
             bottom: -12px;
