--- a/src/components/work/_projects/cardiact/app/shared/buttons/style.scss
+++ b/src/components/work/_projects/cardiact/app/shared/buttons/style.scss
@@ -8,7 +8,7 @@
 	// For all button containers within the app
 
 	.btn__contain{
-		width: 95%;
+		width: 90%;
 		margin: 0px auto 10px;
 	}
 
@@ -18,8 +18,8 @@
 	.btn{	
 		margin-bottom: 10px;
 		padding: 0 0;
-		border-radius: $border-radius;
-		box-shadow: 0px 2px 10px rgba(0,0,0,0.07);
+		border-radius: 44px;
+		box-shadow: 0px 2px 5px rgba( #000 , 0.2 );
 		font-size: $fourteen;
 
 		&__icon{
