--- a/src/components/assets/devices/iphone/style.scss
+++ b/src/components/assets/devices/iphone/style.scss
@@ -42,7 +42,7 @@
 		position: relative;
 		width: 92%;
 		height: 95.5%;
-		background: $iphone-black;
+		background: $white;
 		border-radius: 25px;
 		overflow: hidden;
 		z-index: 0;
