--- a/src/components/next-project/style.scss
+++ b/src/components/next-project/style.scss
@@ -53,10 +53,14 @@
 		opacity: 0.1;
 		z-index: 0;
 
+		// For the image size within the container
+
 		img{
 			@extend %display-flex;
-			min-height: 100%;
-			min-width: 100%;
+			position: absolute;
+		    min-width: 100%;
+		    max-width: 100%;
+		    width: auto;
 		}
 	}
 
